# cepc_public

./: HcalDigiAlg.cpp  README.md  Untitled.ipynb  mmmy_CEPCV4_simu_reco_Arbor.py  my_CEPCV4_simu_reco_Arbor.py  myprocessor.py  test_CEPCV4_simu_reco_Arbor.py
MyProcessor/copy_src/: MyProcessor.hh
MyProcessor/src/: MyProcessor.cc
MyProcessor_cyberpfo/MyProcessor/src/: MyProcessor.cc  MyProcessor.hh
MyProcessor_cyberpfo/src/: MyProcessor.cc  MyProcessor.hh
MyProcessor_mc/: myprocessor_mc.py
MyProcessor_mc/src/: MyProcessor.cc  MyProcessor.hh
MyProcessor_mc_2/: sim1.py
MyProcessor_mc_2/src/: MyProcessor.cc
MyProcessor_old/: CMakeLists.txt
MyProcessor_old/copy_src/: MyProcessor.cc
MyProcessor_old/src/: MyProcessor.hh
TotalInvJets/: CMakeLists.txt  totalinvjets.py
TotalInvJets/src/: TotalInvJets.cc  TotalInvJets.hh
TotalInvJets_old/src/: TotalInvJets.cc  TotalInvJets.hh
hep_condor/: job.sub  job_tdr.sh  script_tdr_o1_v01_1000evt.sh
hep_condor/cepcv4_scripts_for_nfiles/: sample_production_cepcv4.sh
hep_condor/cepcv4_scripts_for_nfiles/backup/: cepcv4Template.py  jobTemplate.sh
hep_condor/old/logs/: job_1.sh  job_2.sh
hep_condor/old/oldold/: job.sh
hep_condor/scripts_for_nfiles/: sample_production_tdr_o1_v01.sh
hep_condor/scripts_for_nfiles/backup/: calodigiTemplate.py  jobTemplate.sh  recTemplate.py  simTemplate.py  trackingTemplate.py
hep_condor/scripts_for_nfiles_new/: sample_production_tdr25.6.0_TDR_o1_v01.sh
myAnalysis_arseny114_11062026/analysis/zh_invisible_analysis/: CMakeLists.txt
myAnalysis_arseny114_11062026/analysis/zh_invisible_analysis/include/: zh_invisible_analysis.h
myAnalysis_arseny114_11062026/analysis/zh_invisible_analysis/ml/: train_bdt.py
myAnalysis_arseny114_11062026/analysis/zh_invisible_analysis/src/: main.cpp
scripts_for_nfiles_new/backup/: recTemplate.py  trackingTemplate.py
useful_scripts/: compare.C  debug.C  slim.C
(+2 files in other folders)
